# BeginningHaskell

./: .project  BeginningHaskell.cabal
Chapter4/: .project  Chapter4.cabal
src/Chapter2/: DataTypes.hs  Example.hs  Guards.hs  ListTuples.hs  PatternMatching.hs  Records.hs  SimpleFunctions.hs
src/Chapter3/: AnnonymousFunctions.hs  DivingIntoLists.hs  ParametricPolymorphism.hs
