name:           BeginningHaskell
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         Elad

library
  build-depends:   base >= 4
  ghc-options:     -Wall
  other-modules:   
                   Chapter2.DataTypes,
                   Chapter2.Example,
                   Chapter2.Guards,
                   Chapter2.ListTuples,
                   Chapter2.PatternMatching,
                   Chapter2.Records,
                   Chapter2.SimpleFunctions,
                   Chapter3.ParametricPolymorphism,
                   Chapter3.AnnonymousFunctions,
                   Chapter3.DivingIntoLists
  hs-source-dirs:  src

